--- a/styles.css
+++ b/styles.css
@@ -1072,3 +1072,18 @@ body.dark-mode .site-logo {
     }
 }
 
+
+
+.sobre-image img {
+    width: 100%;
+    height: auto;
+    object-fit: cover; /* Garante que a imagem cubra o espaço sem distorcer */
+    border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+    .sobre-image {
+        margin-top: 20px;
+    }
+}
+
