--- a/styles.css
+++ b/styles.css
@@ -1118,3 +1118,37 @@ body.dark-mode #menu a {
     color: #fff; /* Garante que os links do menu sejam brancos no modo escuro */
 }
 
+
+
+.hero-video-placeholder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -2; /* Garante que o vídeo fique atrás da overlay */
+}
+
+.background-video {
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover; /* Garante que o vídeo cubra todo o espaço */
+}
+
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(10, 17, 40, 0.7); /* Cor azul com transparência */
+    z-index: -1; /* Garante que a overlay fique entre o vídeo e o conteúdo */
+}
+
